# PyMCMC

./: .gitignore  README.md  pyproject.toml  requirement.txt  setup.py
PyMCMC/: __init__.py  analyzer.py  chain.py  fitter.py  parallel_mcmc.py  parallel_tempering.py  sampler.py
tests/integration/: test_fitter_workflows.py
tests/units/analysis/: test_analyzer.py  test_diagnostics.py
tests/units/core/: test_chain.py  test_priors.py
tests/units/samplers/: test_engines.py
tutorials/: 01_classic_fitting.ipynb  02_parallel_convergence.ipynb  03_parralel_tempering.ipynb  04_absorbtion.ipynb  models.py
